--- a/packages/components/src/DateInput/DateInputWithIconButton/DateInputWithIconButton.module.scss
+++ b/packages/components/src/DateInput/DateInputWithIconButton/DateInputWithIconButton.module.scss
@@ -9,7 +9,7 @@ $input-disabled-opacity: 0.3;
 .iconButton {
   @include button-reset;
 
-  display: inherit;
+  display: flex;
   padding: var(--spacing-6);
   border: $border-solid-border-width $border-solid-border-style transparent;
   border-radius: $border-solid-border-radius;
